separating dto from domain
